# hale-bopp-db

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yml  iron-dome.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: cli.py  console.html  main.py  version.py
app/api/: routes.py
app/core/: compile.py  deploy.py  diff.py  docs.py  drift_detect.py  introspect.py  maetel.py  plan.py  profiles.py  redis_compile.py  security.py  seed.py  validate.py
app/core/llm/: __init__.py  azure_openai.py  ollama.py  openrouter.py  router.py  types.py
app/models/: schemas.py
data/: db-data-dictionary.json
docs/: API_DESIGN.md  DB_AGNOSTIC_DESIGN.md  EPIC-Hale-Bopp.md  PRODUCT_VISION.md  RELEASE_MANAGEMENT.md  agent_questions.md
hale_bopp_db/: __init__.py  cli.py  main.py
hale_bopp_db/api/: routes.py
hale_bopp_db/core/: deploy.py  diff.py
templates/ado/: schema-validate.yml
templates/github/: schema-validate.yml
tests/: test_api.py  test_cli.py  test_compile.py  test_compile_mssql.py  test_compile_oracle.py  test_diff.py  test_docs.py  test_drift_dictionary.py  test_maetel.py  test_plan.py  test_profiles.py  test_redis_compile.py  test_security.py  test_validate.py
workflows/: ci.yml
