[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hale-bopp-db"
dynamic = ["version"]
description = "Deterministic schema governance engine for PostgreSQL"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "httpx>=0.28"]
dev = ["pytest>=8.0", "httpx>=0.28", "openpyxl>=3.1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.dynamic]
version = {attr = "app.version.__version__"}

[project.scripts]
hb = "app.cli:cli"
halebopp = "app.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
